# lewm-mcp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: index.test.ts  index.ts  model.py  python-bridge.ts
